API-4507: fixed broken css / missing class

--- a/app/assets/stylesheets/partials/developers.scss
+++ b/app/assets/stylesheets/partials/developers.scss
@@ -15,6 +15,14 @@
     width: 100%;
 }
 
+.float-left-block {
+    clear: left;
+    display: block;
+    float: left;
+    position: relative;
+    padding: 0 0 10px 8px;
+}
+
 form[name$=-filters] {
     margin-bottom: 1.5em;
 
